# EverMemOS

mindmemo/: README.md
mindmemo/backend/: .env.example  main.py  pyproject.toml  requirements.txt
mindmemo/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
mindmemo/frontend/src/: App.css  App.tsx  index.css
mindmemo/frontend/src/components/: ChatBubble.tsx  ChatWindow.tsx  MemoryPanel.tsx
